--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=-1066.667 Y=100.000
@@ -1016,4 +1016,24 @@ SceneOutliner.TimeStamp=2021.08.24-14.20.58
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2021.08.24-14.20.55
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+
+[MRU]
+MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+
+[DetailCategories]
+PaperSpriteActor.TransformCommon=True
+PaperSpriteActor.Sprite=True
+PaperSpriteActor.Materials=True
+PaperSpriteActor.Physics=True
+PaperSpriteActor.Collision=True
+PaperSpriteActor.Lighting=True
+PaperSpriteActor.Rendering=True
+PaperSpriteActor.Navigation=True
+PaperSpriteActor.VirtualTexture=True
+PaperSpriteActor.Tags=True
+PaperSpriteActor.Activation=True
+PaperSpriteActor.Cooking=True
+PaperSpriteActor.Replication=True
+PaperSpriteActor.Input=True
+PaperSpriteActor.Actor=True
 
