--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -144,6 +144,8 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -1020,4 +1022,66 @@ Voice.TimeStamp=2021.08.31-17.14.54
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2021.08.31-17.14.50
 MovieSceneCapture.LastCompileMethod=Unknown
+
+[MRU]
+MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+
+[ContentBrowserRecent]
+MRUItem0=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem1=/Game/2DSideScroller/Animations/PC_Run
+MRUItem2=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem3=/Game/2DSideScroller/Animations/PC_JumpUp
+MRUItem4=/Game/2DSideScroller/Animations/PC_JumpDown
+MRUItem5=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem6=/Game/2DSideScroller/Animations/PC_Hurt
+MRUItem7=/Game/2DSideScroller/Textures/4_Adkins_CharacterComplete_Sprite_22
+MRUItem8=/Game/2DSideScroller/Textures/4_Adkins_CharacterComplete
+MRUItem9=/Game/2DSideScroller/Textures/4_Adkins_BuildingTileSet
+
+[DetailCategories]
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compositing=True
+PaperExtractSpritesSettings.Settings=True
+PaperExtractSpritesSettings.Naming=True
+PaperExtractSpriteGridSettings.Grid=True
+PaperSprite.Sprite=True
+PaperSprite.Sockets=True
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
+PaperFlipbook.Sprite=True
+PaperSpriteActor.TransformCommon=True
+PaperSpriteActor.Sprite=True
+PaperSpriteActor.Materials=True
+PaperSpriteActor.Physics=True
+PaperSpriteActor.Collision=True
+PaperSpriteActor.Lighting=True
+PaperSpriteActor.Rendering=True
+PaperSpriteActor.Navigation=True
+PaperSpriteActor.VirtualTexture=True
+PaperSpriteActor.Tags=True
+PaperSpriteActor.Activation=True
+PaperSpriteActor.Cooking=True
+PaperSpriteActor.Replication=True
+PaperSpriteActor.Input=True
+PaperSpriteActor.Actor=True
+
+[AssetEditorToolkitTabLocation]
+/Game/2DSideScroller/Animations/PC_Hurt.PC_Hurt=1
+/Game/2DSideScroller/Animations/PC_Idle.PC_Idle=1
+/Game/2DSideScroller/Animations/PC_JumpDown.PC_JumpDown=1
+/Game/2DSideScroller/Animations/PC_JumpUp.PC_JumpUp=1
+/Game/2DSideScroller/Animations/PC_Projectile.PC_Projectile=1
+/Game/2DSideScroller/Animations/PC_Run.PC_Run=1
+/Game/2DSideScroller/Animations/PC_Shoot.PC_Shoot=1
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
+
+[DetailPropertyExpansion]
+PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[3]\" "
+Object="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[3]\" "
 
