--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,7 +149,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1043,4 +1043,35 @@ PaperSpriteActor.Cooking=True
 PaperSpriteActor.Replication=True
 PaperSpriteActor.Input=True
 PaperSpriteActor.Actor=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compositing=True
+PaperExtractSpritesSettings.Settings=True
+PaperExtractSpritesSettings.Naming=True
+PaperExtractSpriteGridSettings.Grid=True
+PaperFlipbookActor.TransformCommon=True
+PaperFlipbookActor.Sprite=True
+PaperFlipbookActor.Materials=True
+PaperFlipbookActor.Physics=True
+PaperFlipbookActor.Collision=True
+PaperFlipbookActor.Lighting=True
+PaperFlipbookActor.Rendering=True
+PaperFlipbookActor.Navigation=True
+PaperFlipbookActor.VirtualTexture=True
+PaperFlipbookActor.Tags=True
+PaperFlipbookActor.Activation=True
+PaperFlipbookActor.Cooking=True
+PaperFlipbookActor.Replication=True
+PaperFlipbookActor.Input=True
+PaperFlipbookActor.Actor=True
+
+[ContentBrowserRecent]
+MRUItem0=/Game/2DSideScrollerBP/New_Piskel
+MRUItem1=/Game/2DSideScrollerBP/Period4_Cox_owen_Q1W7b_-_Building_a_TileSet
+
+[PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Runing.Runing;
 
