--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,13 +146,15 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Animations
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1073,16 +1075,37 @@ PaperSprite.Sprite=True
 PaperSprite.Sockets=True
 PaperSprite.Collision=True
 PaperSprite.Rendering=True
+PaperFlipbook.Sprite=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_0
-MRUItem1=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_1
-MRUItem2=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2_
-MRUItem3=/Game/2DSideScroller/Textures/4_drones_tileset
+MRUItem0=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem1=/Game/2DSideScroller/Animations/PC_Run
+MRUItem2=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem3=/Game/2DSideScroller/Animations/PC_JumpShoot
+MRUItem4=/Game/2DSideScroller/Animations/PC_JumpDown
+MRUItem5=/Game/2DSideScroller/Animations/PC_Jump
+MRUItem6=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem7=/Game/2DSideScroller/Animations/PC_Hurt
+MRUItem8=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_0
+MRUItem9=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_1
+MRUItem10=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2_
+MRUItem11=/Game/2DSideScroller/Textures/4_drones_tileset
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_0.__Lastname_CharacterComplete__2__Sprite_0=1
+/Game/2DSideScroller/Animations/PC_Hurt.PC_Hurt=1
+/Game/2DSideScroller/Animations/PC_Idle.PC_Idle=1
+/Game/2DSideScroller/Animations/PC_Jump.PC_Jump=1
+/Game/2DSideScroller/Animations/PC_JumpDown.PC_JumpDown=1
+/Game/2DSideScroller/Animations/PC_JumpShoot.PC_JumpShoot=1
+/Game/2DSideScroller/Animations/PC_Projectile.PC_Projectile=1
+/Game/2DSideScroller/Animations/PC_Run.PC_Run=1
+/Game/2DSideScroller/Animations/PC_Shoot.PC_Shoot=1
+
+[DetailPropertyExpansion]
+PaperFlipbook="\"Object.Sprite.KeyFrames\" "
+Object="\"Object.Sprite.KeyFrames\" "
 
