--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1076,23 +1076,51 @@ PaperSprite.Sockets=True
 PaperSprite.Collision=True
 PaperSprite.Rendering=True
 PaperFlipbook.Sprite=True
+2DSideScrollerCharacter_C.Camera=True
+2DSideScrollerCharacter_C.Tick=True
+2DSideScrollerCharacter_C.Default=True
+2DSideScrollerCharacter_C.Character=True
+2DSideScrollerCharacter_C.Pawn=True
+2DSideScrollerCharacter_C.Replication=True
+2DSideScrollerCharacter_C.Rendering=True
+2DSideScrollerCharacter_C.Collision=True
+2DSideScrollerCharacter_C.Actor=True
+2DSideScrollerCharacter_C.Input=True
+PaperFlipbookComponent.Variable=True
+PaperFlipbookComponent.TransformCommon=True
+PaperFlipbookComponent.Sockets=True
+PaperFlipbookComponent.Sprite=True
+PaperFlipbookComponent.Materials=True
+PaperFlipbookComponent.ComponentTick=True
+PaperFlipbookComponent.Physics=True
+PaperFlipbookComponent.Collision=True
+PaperFlipbookComponent.Lighting=True
+PaperFlipbookComponent.Navigation=True
+PaperFlipbookComponent.Rendering=True
+PaperFlipbookComponent.VirtualTexture=True
+PaperFlipbookComponent.Tags=True
+PaperFlipbookComponent.ComponentReplication=True
+PaperFlipbookComponent.Activation=True
+PaperFlipbookComponent.Cooking=True
+PaperFlipbookComponent.Events=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Animations/PC_Shoot
-MRUItem1=/Game/2DSideScroller/Animations/PC_Run
-MRUItem2=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem3=/Game/2DSideScroller/Animations/PC_JumpShoot
-MRUItem4=/Game/2DSideScroller/Animations/PC_JumpDown
-MRUItem5=/Game/2DSideScroller/Animations/PC_Jump
-MRUItem6=/Game/2DSideScroller/Animations/PC_Idle
-MRUItem7=/Game/2DSideScroller/Animations/PC_Hurt
-MRUItem8=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_0
-MRUItem9=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_1
-MRUItem10=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2_
-MRUItem11=/Game/2DSideScroller/Textures/4_drones_tileset
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem1=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem2=/Game/2DSideScroller/Animations/PC_Run
+MRUItem3=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem4=/Game/2DSideScroller/Animations/PC_JumpShoot
+MRUItem5=/Game/2DSideScroller/Animations/PC_JumpDown
+MRUItem6=/Game/2DSideScroller/Animations/PC_Jump
+MRUItem7=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem8=/Game/2DSideScroller/Animations/PC_Hurt
+MRUItem9=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_0
+MRUItem10=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_1
+MRUItem11=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2_
+MRUItem12=/Game/2DSideScroller/Textures/4_drones_tileset
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/__Lastname_CharacterComplete__2__Sprite_0.__Lastname_CharacterComplete__2__Sprite_0=1
@@ -1104,8 +1132,45 @@ MRUItem11=/Game/2DSideScroller/Textures/4_drones_tileset
 /Game/2DSideScroller/Animations/PC_Projectile.PC_Projectile=1
 /Game/2DSideScroller/Animations/PC_Run.PC_Run=1
 /Game/2DSideScroller/Animations/PC_Shoot.PC_Shoot=1
+/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
-Object="\"Object.Sprite.KeyFrames\" "
+Object=
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
