Changed character size and movement, along with increasing in air controllability.

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1026,8 +1026,8 @@ TextureEditor.LastCompileMethod=Unknown
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Sprites/4_Briggs_CharacterComplete_Sprite_2
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem1=/Game/2DSideScroller/Sprites/4_Briggs_CharacterComplete_Sprite_2
 MRUItem2=/Game/2DSideScroller/Animations/PC_Shoot
 MRUItem3=/Game/2DSideScroller/Animations/PC_Run
 MRUItem4=/Game/2DSideScroller/Animations/PC_Hurt
@@ -1125,6 +1125,57 @@ PaperSpriteActor.Cooking=True
 PaperSpriteActor.Replication=True
 PaperSpriteActor.Input=True
 PaperSpriteActor.Actor=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+CameraComponent.TransformCommon=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Physics=False
+CameraComponent.Collision=False
+CameraComponent.AssetUserData=False
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -1142,6 +1193,11 @@ PaperSpriteActor.Actor=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
+
+[DetailCustomWidgetExpansion]
+CameraComponent=CameraComponent.PostProcess.Lens|Mobile Depth of FieldAdvanced,CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|Chromatic Aberration,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Color Grading,
+CapsuleComponent=
+2DSideScrollerCharacter_C=CameraComponent.PostProcess.Lens|Mobile Depth of FieldAdvanced,CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|Chromatic Aberration,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Color Grading,
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1178,4 +1234,13 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[SelectionDetails]
+PreserveScaleRatio=True
+
+[DetailPropertyExpansion]
+CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
+SceneComponent=
+ActorComponent=
+Object=
 
