Changed Character Size and Cam Settings

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,7 +153,6 @@ LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
 
 [RootWindow]
 ScreenPosition=X=571.000 Y=149.000
@@ -1036,12 +1035,12 @@ MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
 MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem1=/Game/2DSideScroller/Animations/PC_Shoot
-MRUItem2=/Game/2DSideScroller/Animations/PC_Run
-MRUItem3=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem4=/Game/2DSideScroller/Animations/PC_JumpUp
-MRUItem5=/Game/2DSideScroller/Animations/PC_JumpDown
-MRUItem6=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem1=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem2=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem3=/Game/2DSideScroller/Animations/PC_Run
+MRUItem4=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem5=/Game/2DSideScroller/Animations/PC_JumpUp
+MRUItem6=/Game/2DSideScroller/Animations/PC_JumpDown
 MRUItem7=/Game/2DSideScroller/Animations/PC_Hurt
 MRUItem8=/Game/2DSideScroller/Textures/4_Adkins_CharacterComplete_Sprite_22
 MRUItem9=/Game/2DSideScroller/Textures/4_Adkins_CharacterComplete
@@ -1370,6 +1369,72 @@ PaperFlipbookComponent.Cooking=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 K2Node_VariableGet.Events=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+CameraComponent.TransformCommon=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+PaperFlipbookComponent.Variable=True
+PaperFlipbookComponent.Sockets=True
+PaperFlipbookComponent.ComponentTick=True
+PaperFlipbookComponent.ComponentReplication=True
+PaperFlipbookComponent.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Events=True
+CameraComponent.Variable=True
+CameraComponent.Sockets=True
+CameraComponent.ComponentTick=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Events=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/PC_Hurt.PC_Hurt=1
@@ -1379,7 +1444,7 @@ K2Node_VariableGet.Events=True
 /Game/2DSideScroller/Animations/PC_Projectile.PC_Projectile=1
 /Game/2DSideScroller/Animations/PC_Run.PC_Run=1
 /Game/2DSideScroller/Animations/PC_Shoot.PC_Shoot=1
-/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
+/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=0
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
