Added camera lag.

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -144,7 +144,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Animations
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -152,12 +152,12 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
 WindowSize=X=1283.000 Y=723.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1021,6 +1021,12 @@ HierarchicalLODOutliner.TimeStamp=2021.08.27-12.45.48
 HierarchicalLODOutliner.LastCompileMethod=External
 TextureEditor.TimeStamp=2021.08.27-12.45.52
 TextureEditor.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2021.08.27-12.45.46
+BlueprintGraph.LastCompileMethod=Unknown
+Voice.TimeStamp=2021.08.27-12.45.54
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2021.08.27-12.45.50
+MovieSceneCapture.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -1195,9 +1201,9 @@ CharacterMovementComponent.Cooking=True
 InstalledPlugins=XRVisualization
 
 [DetailCustomWidgetExpansion]
-CameraComponent=CameraComponent.PostProcess.Lens|Mobile Depth of FieldAdvanced,CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|Chromatic Aberration,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Color Grading,
+CameraComponent=CameraComponent.PostProcess.Lens
 CapsuleComponent=
-2DSideScrollerCharacter_C=CameraComponent.PostProcess.Lens|Mobile Depth of FieldAdvanced,CameraComponent.PostProcess.Lens|Mobile Depth of Field,CameraComponent.PostProcess.Lens|Chromatic Aberration,CameraComponent.PostProcess.Lens|Camera,CameraComponent.PostProcess.Lens|Depth of Field,CameraComponent.PostProcess.Lens,CameraComponent.PostProcess.Color Grading|Global,CameraComponent.PostProcess.Color Grading|Shadows,CameraComponent.PostProcess.Color Grading|Midtones,CameraComponent.PostProcess.Color Grading|Highlights,CameraComponent.PostProcess.Color Grading,
+2DSideScrollerCharacter_C=CameraComponent.PostProcess.Lens,
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
