--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1031,6 +1031,8 @@ PortalProxies.TimeStamp=2021.08.27-16.55.01
 PortalProxies.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2021.08.27-16.55.06
 TextureEditor.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2021.08.27-16.54.47
+BlueprintGraph.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -1103,6 +1105,62 @@ PaperFlipbookComponent.ComponentReplication=True
 PaperFlipbookComponent.Activation=True
 PaperFlipbookComponent.Cooking=True
 PaperFlipbookComponent.Events=True
+2DSideScrollerCharacter_C.TransformCommon=True
+2DSideScrollerCharacter_C.Sprite=True
+2DSideScrollerCharacter_C.Physics=True
+2DSideScrollerCharacter_C.Lighting=True
+2DSideScrollerCharacter_C.Navigation=True
+2DSideScrollerCharacter_C.VirtualTexture=True
+2DSideScrollerCharacter_C.Tags=True
+2DSideScrollerCharacter_C.Activation=True
+2DSideScrollerCharacter_C.Cooking=True
+2DSideScrollerCharacter_C.Character Movement (General Settings)=True
+2DSideScrollerCharacter_C.Character Movement: Walking=True
+2DSideScrollerCharacter_C.Character Movement: Jumping / Falling=True
+2DSideScrollerCharacter_C.Character Movement (Networking)=True
+2DSideScrollerCharacter_C.Character Movement: Swimming=True
+2DSideScrollerCharacter_C.Character Movement: Flying=True
+2DSideScrollerCharacter_C.Character Movement: Custom Movement=True
+2DSideScrollerCharacter_C.Character Movement (Rotation Settings)=True
+2DSideScrollerCharacter_C.Character Movement: Physics Interaction=True
+2DSideScrollerCharacter_C.Character Movement=True
+2DSideScrollerCharacter_C.Character Movement: Avoidance=True
+2DSideScrollerCharacter_C.RootMotion=True
+2DSideScrollerCharacter_C.Character Movement: NavMesh Movement=True
+2DSideScrollerCharacter_C.NavMovement=True
+2DSideScrollerCharacter_C.Velocity=True
+2DSideScrollerCharacter_C.PlanarMovement=True
+2DSideScrollerCharacter_C.MovementComponent=True
+2DSideScrollerCharacter_C.Shape=True
+2DSideScrollerCharacter_C.Materials=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+CameraComponent.TransformCommon=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1173,4 +1231,7 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[SelectionDetails]
+PreserveScaleRatio=False
 
