--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -155,10 +155,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScroller/Textures/Level1_4_Adkins_BuildingTileSet.Level1_4_Adkins_BuildingTileSet
-OpenAssetsAtExit=/Game/2DSideScroller/Textures/Level1_Tilemap.Level1_TileMap
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=571.000 Y=149.000
