--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=18.000 Y=157.000
@@ -1101,22 +1101,34 @@ PaperFlipbook.Sprite=True
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/animationn/PC_idle
-MRUItem1=/Game/2DSideScroller/animationn/PC_Hurt
-MRUItem2=/Game/2DSideScroller/Sprites/PC_Run
-MRUItem3=/Game/2DSideScroller/Sprites/4_Zouvias_TileSet
-MRUItem4=/Game/2DSideScroller/Sprites/PC_Hurt
-MRUItem5=/Game/2DSideScroller/Sprites/Hurt
-MRUItem6=/Game/2DSideScroller/Sprites/4_Zouvias_CharacterCompletePNG
-MRUItem7=/Game/2DSideScroller/Textures/4_Zouvias_CharacterCompletePNG
-MRUItem8=/Game/2DSideScroller/Textures/4_Zouvias_TileSet
+MRUItem0=/Game/2DSideScroller/animationn/PC_Shoot
+MRUItem1=/Game/2DSideScroller/animationn/PC_Run
+MRUItem2=/Game/2DSideScroller/animationn/PC_Projectile
+MRUItem3=/Game/2DSideScroller/animationn/PC_JumpShoot
+MRUItem4=/Game/2DSideScroller/animationn/PC_JumpUp
+MRUItem5=/Game/2DSideScroller/animationn/PC_JumpDown
+MRUItem6=/Game/2DSideScroller/animationn/PC_idle
+MRUItem7=/Game/2DSideScroller/animationn/PC_Hurt
+MRUItem8=/Game/2DSideScroller/Sprites/PC_Run
+MRUItem9=/Game/2DSideScroller/Sprites/4_Zouvias_TileSet
+MRUItem10=/Game/2DSideScroller/Sprites/PC_Hurt
+MRUItem11=/Game/2DSideScroller/Sprites/Hurt
+MRUItem12=/Game/2DSideScroller/Sprites/4_Zouvias_CharacterCompletePNG
+MRUItem13=/Game/2DSideScroller/Textures/4_Zouvias_CharacterCompletePNG
+MRUItem14=/Game/2DSideScroller/Textures/4_Zouvias_TileSet
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/animationn/PC_Hurt.PC_Hurt=1
 /Game/2DSideScroller/animationn/PC_idle.PC_Idle=1
 /Game/2DSideScroller/Sprites/4_Zouvias_TileSet.4_Zouvias_TileSet=1
+/Game/2DSideScroller/animationn/PC_JumpDown.PC_JumpDown=1
+/Game/2DSideScroller/animationn/PC_JumpShoot.PC_JumpShoot=1
+/Game/2DSideScroller/animationn/PC_JumpUp.PC_JumpUp=1
+/Game/2DSideScroller/animationn/PC_Projectile.PC_Projectile=1
+/Game/2DSideScroller/animationn/PC_Run.PC_Run=1
+/Game/2DSideScroller/animationn/PC_Shoot.PC_Shoot=1
 
 [DetailPropertyExpansion]
-PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[5]\" "
+PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" "
 Object=
 
